src/harness/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_code_empty_mode_cycle_with_context.snap
---
source: src/harness/tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                            "
"› Ask Codex to do anything                                  "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"  gpt-5.4 high · 100% left  Code mode (shift+tab to cycle)  "
